# mindmap

./: .gitignore  README.md  package.json  test_rust_backend.py
app/: package.json  vite.config.ts
app/src/: App.tsx
app/src/components/: ProjectModal.tsx  ProtectedRoute.tsx  Sidebar.tsx
app/src/components/nodes/: CustomNode.tsx  Image.tsx  Note.tsx
app/src/pages/: Login.tsx  Project.tsx  Projects.tsx  Register.tsx  Settings.tsx
app/src/services/: authService.ts  tauriService.ts
backend/: app.py  auth.py  db.sqlite  models.py  requirements.txt
backend-rust/: Cargo.toml  db.sqlite
backend-rust/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
