[package]
name = "mindmaps-backend"
version = "0.1.0"
edition = "2021"


[dependencies]
# Web framework
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "fs"] }
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "8.3"
bcrypt = "0.14"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment variables
dotenvy = "0.15"
